fix(3156129296): align login modal to Figma

--- a/src/components/UI/Alert/Alert.module.scss
+++ b/src/components/UI/Alert/Alert.module.scss
@@ -9,7 +9,6 @@
   padding: 15px;
 
   .icon {
-    width: 15%;
     display: flex;
     justify-content: space-around;
   }
@@ -17,6 +16,7 @@
   .text {
     display: flex;
     flex-direction: column;
+    padding-left: 12px;
 
     .title {
       font-weight: 500;
