--- a/src/components/UI/MultiChoiceMenu/MultiChoiceMenu.module.scss
+++ b/src/components/UI/MultiChoiceMenu/MultiChoiceMenu.module.scss
@@ -1,12 +1,12 @@
 @import '../../../index';
 
 .multiChoiceMenu {
-  background: $--color-space-cadet;
+  background: $--color-space-cadet-3;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  border-radius: 20px;
+  border-radius: 16px;
 
   .content {
-    padding: 30px;
+    padding: 24px 32px;
 
     p {
       font-size: 12px;
@@ -15,13 +15,20 @@
     }
 
     .title {
-      margin-bottom: 30px;
+      margin-bottom: 24px;
       font-weight: 600;
       font-size: 24px;
-      line-height: 30px;
+      line-height: 29px;
       text-align: center;
       letter-spacing: 0.01em;
       color: $--color-white;
+    }
+
+    .alert {
+      display: flex;
+      align-items: center;
+      padding: 15px;
+      margin-top: 24px;
     }
   }
 }
